--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,11 @@
     "react-dom": "^18.2.0",
     "axios": "^1.6.2",
     "recharts": "^2.10.3",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "@mui/material": "^5.14.0",
+    "@mui/icons-material": "^5.14.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.38",
